src/app/components/profile-card/profile-card.component.scss
.card {
    border-radius: 8px;
    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
    display: inline-block;
    
    &__heading {
        font-size: 1.4rem;
        font-weight: 600;
    }

    &__content {
        font-size: 1.3rem;
        padding: 10px 0px;
    }

    &__actions {
        display: flex;
    }

    &__btn {
        padding: 0 3rem;
        margin: 0 auto;
        font-weight: 300;
        line-height: 1rem;
        margin-bottom: 1rem;
    }

    &--info {
        padding: 0;
    }

    &__header {
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;
        position: relative;
    }

    &__title {
        padding-top: 1rem;
    }

    &__image{
        background-size: contain;
        background-repeat: no-repeat;
        width: 6rem;
        height: 6rem;
        margin: 3rem 0;
        z-index: 10;
    }

    &__line {
        width: 100%;
        height: 1px;
        border: .5px solid rgba(112, 112, 112, 0.3);
        position: absolute;
        transform: translate(0, 6rem);
        top: 0;
        left: 0;
    }

    &__content {
        padding: 1.5rem;

        @media only screen and (max-width:1200px){
            padding: 2rem 1rem 0 1rem;
        }
    }

    &__ideas {
        margin-bottom: 1.5rem;
    }

    &__icons {
        @media only screen and (max-width:1200px){
            height: 2.35rem;
            width: 2.35rem;
        }
    }

    &__details {
        font-size: 1.2rem;
        margin-left: 1rem;

        @media only screen and (max-width:1200px){
            font-size: 1.1rem;
            font-weight: 400;
        }
    }
}

:host /deep/ mat-card .mat-card-header-text{
    margin: 0;
}

